[project]
name = "enterprise-knowledge-assistant"
version = "1.0.0"
description = "RAG-based Q&A assistant over internal company documents"
requires-python = ">=3.11"
dependencies = [
    "streamlit==1.35.0",
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.2.0",
    "langchain-huggingface>=0.0.3",
    "langchain-text-splitters>=0.2.0",
    "openai>=1.30.0",
    "pdfplumber>=0.11.0",
    "PyPDF2>=3.0.0",
    "faiss-cpu>=1.7.4",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.7.0",
    "fastapi==0.115.6",
    "starlette==0.41.3",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "numpy>=1.26.0",
    "rank-bm25>=0.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
