[project]
name = "enterprise-knowledge-assistant"
version = "1.0.0"
description = "RAG-based Q&A assistant over internal company documents"
requires-python = ">=3.11,<3.12"
dependencies = [
    "streamlit==1.35.0",
    "langchain==0.2.17",
    "langchain-core==0.2.43",
    "langchain-openai==0.1.25",
    "langchain-community==0.2.19",
    "langchain-huggingface>=0.0.3",
    "langchain-text-splitters==0.2.4",
    "openai==1.59.9",
    "pdfplumber==0.11.4",
    "PyPDF2>=3.0.0",
    "faiss-cpu==1.8.0.post1",
    "python-dotenv>=1.0.0",
    "sentence-transformers==3.0.1",
    "fastapi==0.115.6",
    "starlette==0.41.3",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "numpy==1.26.4",
    "rank-bm25>=0.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
